fix: :bug: fix shifting of the whole page when expanding the navbar

--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -29,14 +29,24 @@
     }
 
     .menu {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        right: 0;
         flex: 0 0 100%;
         flex-direction: column;
         align-items: center;
         order: 3;
-        transition: max-height 0.5s ease;
-        max-height: 0;
-        overflow: hidden;
         gap: 8px;
+        transition: opacity 0.1s linear, visibility 0.1s linear;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    .menu.active {
+        opacity: 1;
+        visibility: visible;
     }
 
     .menu__wrap-button {
