--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ header {
     padding: 20px 80px 20px 80px;
 }
 
+.header-whitebg {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
 .d-none {
     display: none;
 }
@@ -110,7 +114,7 @@ header {
 }
 
 .menu-padding {
-    padding-top: 24px;
+    padding: 24px 0;
 }
 
 .menu__link {
